--- a/react-router/src/App.css
+++ b/react-router/src/App.css
@@ -1,15 +1,15 @@
-nav{
+.mainNav{
     background-color: blue;
     padding: 15px 30px;
 }
 
-nav a{
+.mainNav a{
     color:whitesmoke;
     text-decoration: none;
     margin-left: 10px;
 }
 
-nav a.active{
+.mainNav a.active{
     font-weight: bold;
     font-size: 20px;
 }
