formik validations and submitting events added

--- a/formProject/src/App.css
+++ b/formProject/src/App.css
@@ -60,5 +60,15 @@ button:hover{
     border: none;
 }
 
+.input-error{
+    border-color: #fc8181;
+}
+
+.error{
+    color: #fc8181;
+    font-size: 12px;
+    text-align: left;
+}
+
 
 
