portal design and validations added

--- a/formProject/src/App.css
+++ b/formProject/src/App.css
@@ -14,7 +14,8 @@ label{
     font-weight: bold;
 }
 
-input{
+input,
+select{
     width: 100%;
     padding: 8px 7px;
     font-size: 16px;
@@ -68,6 +69,20 @@ button:hover{
     color: #fc8181;
     font-size: 12px;
     text-align: left;
+}
+
+.checkbox{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.checkbox input{
+    width: auto;
+}
+
+.formLink{
+    color: white;
 }
 
 
